minio.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minio-sample
  labels:
    app: minio-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-sample
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio-sample
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-sample
      containers:
        - resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: minio
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 9000
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: minio
          image: >-
            quay.io/opendatahub/minio:RELEASE.2019-08-14T20-37-41Z-license-compliance
          args:
            - server
            - /data
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: minio-sample
  labels:
    app: minio-sample
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
  selector:
    app: minio-sample
