minio-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
  labels:
    app: minio-sample
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: minio-sample
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
